@@ -1,6 +1,7 @@
 Wed Oct 09 2002 David Reveman (c99drn@cs.umu.se)
 
-   Added text shadow support
+   *** Waimea v0.3.4 release ***
+	Added text shadow support
 
 Sun Oct 06 2002 David Reveman (c99drn@cs.umu.se)
 
